Bug 1934334 - Use a larger type for a video encoder framerate, clamp the frame rate to positive value. r=media-playback-reviewers,aosmond

There is no reason the frame rate can't be greater than 255.

Differential Revision: https://phabricator.services.mozilla.com/D233268