dom/media/webcodecs/VideoEncoder.cpp
@@ -278,7 +278,7 @@ EncoderConfig VideoEncoderConfigInternal::ToEncoderConfig() const {
   return EncoderConfig(codecType, {mWidth, mHeight}, usage,
                        // Gecko favors BGRA
                        ImageBitmapFormat::BGRA32, ImageBitmapFormat::BGRA32,
-                       AssertedCast<uint8_t>(mFramerate.refOr(0.f)), 0,
+                       SaturatingCast<uint32_t>(mFramerate.refOr(0.f)), 0,
                        mBitrate.refOr(0), 0, 0,
                        mBitrateMode == VideoEncoderBitrateMode::Constant
                            ? mozilla::BitrateMode::Constant
